@@ -1,3 +1,8 @@
+2011-01-11  Thiago Jung Bauermann  <bauerman@br.ibm.com>
+
+	* breakpoint.c (resources_needed_watchpoint): Fix indentation.
+	* gdbtypes.c (is_scalar_type_recursive): Fix formatting.
+
 2011-01-11  Sergio Durigan Junior  <sergiodj@linux.vnet.ibm.com>
 	    Thiago Jung Bauermann  <bauerman@br.ibm.com>
 
